added new project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="abt_me_sec">
                     <h2>About Me</h2>
 
-                    Aspiring software engineer skilled in C++, Python, JS, React, and CSS.
+                    Aspiring software engineer skilled in C++, Python, JS, TS, Nextjs, React, Nodejs, Expressjs and CSS.
                     Also into video editing, motion graphics, and 3D modeling.
 
                 </div>
@@ -234,17 +234,16 @@
             <section id="proj_id">
                 <div class="proj_sec">
                     <h2>Projects</h2>
-                    <h3><a href="https://www.linkedin.com/posts/activity-7393296456125693952-DRkm?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAFkH4dMBDDVleB72xnHpKvjp2VY3h95BvmE"
-                            target="_blank">🔗</a> EduSync – Unified Smart Campus
-                        System | MERN, JWT, WebSockets, AI/ML</h3>
+                    <h3><a href="https://edu-sync-ashen.vercel.app/"
+                            target="_blank">🔗EduSync – Unified Smart Campus
+                        System | MERN, JWT, WebSockets, AI/ML</h3></a> 
                     A full-stack campus platform with AI-driven timetable optimization, centralized notes, smart
                     café ordering, calendar integration, real-time notifications, and AI-powered academic
                     assistance.
                     <br>
                     <div class="tech-stack-div">
-                        <div class="tech-stack-used">React.js</div>
-                        <div class="tech-stack-used">Node.js</div>
-                        <div class="tech-stack-used">Express.js</div>
+                        <div class="tech-stack-used">Next.js</div>
+                        <div class="tech-stack-used">TypeScript</div>
                         <div class="tech-stack-used">MongoDB</div>
                         <div class="tech-stack-used">Firebase</div>
                         <div class="tech-stack-used">RAG</div>
@@ -253,8 +252,8 @@
                         <div class="tech-stack-used">Python</div>
                         <div class="tech-stack-used">Nodemailer</div>
                     </div>
-                    <h3><a href="https://recrailer.vercel.app/" target="_blank">🔗</a> Recrailer - Email Campaign
-                        Manager | MERN, JWT, Node-Cron</h3>
+                    <h3><a href="https://recrailer.vercel.app/" target="_blank">🔗 Recrailer - Email Campaign
+                        Manager | MERN, JWT, Node-Cron</h3></a>
                     A full-stack email campaign manager with secure Gmail integration, JWT authentication, and
                     automated
                     email scheduling using Cron jobs. Minimalist design with easy-to-use dashboard and campaign
@@ -273,8 +272,8 @@
                         <div class="tech-stack-used">Render</div>
                     </div>
 
-                    <h3><a href="https://github.com/Shourya523/VocalizeIt" target="_blank">🔗</a> VocalizeIt - TTS
-                        website | React, Node.js</h3>
+                    <h3><a href="https://github.com/Shourya523/VocalizeIt" target="_blank">🔗 VocalizeIt - TTS
+                        website | React, Node.js</h3></a>
                     A minimalist React and Node.js TTS app using ElevenLabs API for natural voice synthesis. Clean
                     design, fast performance, and easy-to-use interface.
                     <br>
@@ -287,8 +286,8 @@
                         <div class="tech-stack-used">Render</div>
                         <div class="tech-stack-used">HTML</div>
                     </div>
-                    <h3><a href="https://shourya523.github.io/Remndr/" target="_blank">🔗</a> Remndr - ToDo App |
-                        React</h3>
+                    <h3><a href="https://shourya523.github.io/Remndr/" target="_blank">🔗 Remndr - ToDo App |
+                        React</h3></a>
                     A stylish React To-Do List app with task and subtask management, deadline support, and
                     localStorage
                     for data persistence. It features easy task deletion, multiple font options, and a custom
